MOB-45005: Initial migration to Jetty 12